--- a/src/main/resources/assets/wynnlib/lang/en_us.json
+++ b/src/main/resources/assets/wynnlib/lang/en_us.json
@@ -16,6 +16,7 @@
     "wynnlib.ui.advance_search": "Search Criteria",
     "wynnlib.ui.filter_condition.item_type": "Item Type",
     "wynnlib.ui.filter_condition.rarity": "Rarity",
+    "wynnlib.ui.filter_condition.level": "Combat Level",
     "wynnlib.ui.filter_condition.id": "Identification",
     "wynnlib.ui.check_box.left_click": "Left-Click to toggle this option",
     "wynnlib.ui.check_box.right_click": "Right-Click to deselect all other options",
