--- a/src/main/resources/assets/wynnlib/lang/en_us.json
+++ b/src/main/resources/assets/wynnlib/lang/en_us.json
@@ -545,28 +545,28 @@
     "wynnlib.id_group.spell_cost": "Spell Cost",
     "wynnlib.id_group.tome_effect": "Tome Effect",
     "wynnlib.id_group.charm_exclusive": "Charm Exclusive",
-    "wynnlib.major_id.name.magnet": "Magnet",
-    "wynnlib.major_id.desc.magnet": "Pulls items dropped by mobs towards you",
     "wynnlib.major_id.name.plague": "Plague",
     "wynnlib.major_id.desc.plague": "Poisoned mobs spread their poison to nearby mobs",
     "wynnlib.major_id.name.hawkeye": "Hawkeye",
-    "wynnlib.major_id.desc.hawkeye": "Condense Arrow Storm into a tight beam. Arrows deal 6{\u2723} 10%, e{\u2726} 1%, and f{\u274b} 1%",
+    "wynnlib.major_id.desc.hawkeye": "Condense Arrow Storm into a tight beam. Arrows deal §6✢ §r10%, §e✦ §r1%, and §f❋ §r1%",
     "wynnlib.major_id.name.greed": "Greed",
     "wynnlib.major_id.desc.greed": "Picking up emeralds heals you and nearby players for 15% max health",
     "wynnlib.major_id.name.cavalryman": "Cavalryman",
     "wynnlib.major_id.desc.cavalryman": "You may cast spells and attack with a -70% damage penalty while on a horse",
     "wynnlib.major_id.name.guardian": "Guardian",
     "wynnlib.major_id.desc.guardian": "20% of damage taken by nearby allies is redirected to you",
-    "wynnlib.major_id.name.hero": "Saviour\u2019s Sacrifice",
-    "wynnlib.major_id.desc.hero": "While under 50% maximum health, nearby allies gain 30% bonus damage and defence",
     "wynnlib.major_id.name.altruism": "Heart of the Pack",
     "wynnlib.major_id.desc.altruism": "Nearby players gain 35% of the health you naturally regenerate",
+    "wynnlib.major_id.name.hero": "Saviour's Sacrifice",
+    "wynnlib.major_id.desc.hero": "While under 50% maximum health, nearby allies gain 20% bonus damage and defence",
     "wynnlib.major_id.name.arcanes": "Transcendence",
     "wynnlib.major_id.desc.arcanes": "30% chance for spells to cost no mana when casted",
     "wynnlib.major_id.name.entropy": "Entropy",
     "wynnlib.major_id.desc.entropy": "Meteor falls three times faster",
     "wynnlib.major_id.name.rovingassassin": "Roving Assassin",
     "wynnlib.major_id.desc.rovingassassin": "Vanish will no longer block mana and health regeneration",
+    "wynnlib.major_id.name.magnet": "Magnet",
+    "wynnlib.major_id.desc.magnet": "Pulls items dropped by mobs towards you",
     "wynnlib.major_id.name.madness": "Madness",
     "wynnlib.major_id.desc.madness": "Casts a random spell of your class every 3 seconds",
     "wynnlib.major_id.name.lightweight": "Lightweight",
@@ -575,17 +575,17 @@
     "wynnlib.major_id.desc.sorcery": "30% chance for spells and attacks to cast a second time at no additional cost",
     "wynnlib.major_id.name.taunt": "Taunt",
     "wynnlib.major_id.desc.taunt": "Mobs within 12 blocks target you upon casting War Scream",
+    "wynnlib.major_id.name.freerunner": "Freerunner",
+    "wynnlib.major_id.desc.freerunner": "When your sprint bar is under 30% full, increase your sprint speed by +150%",
     "wynnlib.major_id.name.rally": "Rally",
     "wynnlib.major_id.desc.rally": "Charge heals you by 10% and nearby allies by 15% on impact, but becomes harmless",
     "wynnlib.major_id.name.cherry_bombs": "Cherry Bombs",
-    "wynnlib.major_id.desc.cherry_bombs": "Your Smoke Bombs explodes instantly, and increase their Neutral Damage by +90%",
-    "wynnlib.major_id.name.freerunner": "Freerunner",
-    "wynnlib.major_id.desc.freerunner": "When your sprint bar is under 30% full, increase your sprint speed by +150%",
+    "wynnlib.major_id.desc.cherry_bombs": "Your Smoke Bombs explode instantly, and increases their Neutral Damage by +90%",
     "wynnlib.major_id.name.peaceful_effigy": "Peaceful Effigy",
     "wynnlib.major_id.desc.peaceful_effigy": "Your Totem will last twice as long",
     "wynnlib.major_id.name.furious_effigy": "Furious Effigy",
     "wynnlib.major_id.desc.furious_effigy": "Totem effects are twice as fast, but duration is halved",
-    "wynnlib.major_id.name.flashfreeze": "Flashfreeze",
+    "wynnlib.major_id.name.flashfreeze": "Flash Freeze",
     "wynnlib.major_id.desc.flashfreeze": "Ice Snake is instant and freezes for +1s",
     "wynnlib.major_id.name.fission": "Fission",
     "wynnlib.major_id.desc.fission": "Explosions from your Exploding ID are twice as big and twice as strong",
@@ -595,6 +595,46 @@
     "wynnlib.major_id.desc.geocentrism": "Aura radiates from you instead of your Totem and can be cast any time",
     "wynnlib.major_id.name.gravitywell": "Gravity Well",
     "wynnlib.major_id.desc.gravitywell": "Meteor has increased blast radius and pulls enemies instead",
+    "wynnlib.major_id.name.alterego": "Alter Ego",
+    "wynnlib.major_id.desc.alterego": "Awakened can be activated after saving 40% less mana, but its duration is reduced by -25%",
+    "wynnlib.major_id.name.divine_honor": "Divine Honor",
+    "wynnlib.major_id.desc.divine_honor": "Increases the bonus from Radiance by 5%. Bash deals §2✤ §3-15% per hit.",
+    "wynnlib.major_id.name.escape_route": "Escape Route",
+    "wynnlib.major_id.desc.escape_route": "Frenzy and Time Dilation charge twice as fast, but to a halved maximum",
+    "wynnlib.major_id.name.forest_blessing": "Forest's Blessing",
+    "wynnlib.major_id.desc.forest_blessing": "Your archer summons have increased movement speed, attack speed, and vision. Bomb Arrow's damage is reduced by §6✢ §3-30%.",
+    "wynnlib.major_id.name.gentle_glow": "Gentle Glow",
+    "wynnlib.major_id.desc.gentle_glow": "Orphion's Pulse restores more health, with an increased rate to allies and Fluid Healing effectiveness. Health is restored much slower",
+    "wynnlib.major_id.name.juggle": "Juggle",
+    "wynnlib.major_id.desc.juggle": "Stronger Multihit adds an additional 12 hits. All hits are reduced by §6✢ §r-10%.",
+    "wynnlib.major_id.name.overwhelm": "Overwhelm",
+    "wynnlib.major_id.desc.overwhelm": "Bash will hit +2 times",
+    "wynnlib.major_id.name.perfect_recall": "Perfect Recall",
+    "wynnlib.major_id.desc.perfect_recall": "Memory Recollection adds 1 extra spell. Increases Chaos Explosion's mana bank requirement to 150",
+    "wynnlib.major_id.name.reckless_abandon": "Reckless Abandon",
+    "wynnlib.major_id.desc.reckless_abandon": "Tempest deals §c✹ §3+15% and gains one additional charge. War Scream no longer grants a defence bonus.",
+    "wynnlib.major_id.name.soul_eater": "Soul Eater",
+    "wynnlib.major_id.desc.soul_eater": "Devour and Harvester grant double mana. Decreases maximum marks by 1",
+    "wynnlib.major_id.name.strings_of_fate": "Strings of Fate",
+    "wynnlib.major_id.desc.strings_of_fate": "Your puppets have a lifetime of 3 seconds, and deal double damage with attacks and explosions",
+    "wynnlib.major_id.name.temblor": "Temblor",
+    "wynnlib.major_id.desc.temblor": "Bash gains +1 Area of Effect and is 20% faster",
+    "wynnlib.major_id.name.desc_snowysteps": "Snowy Steps",
+    "wynnlib.major_id.desc.desc_snowysteps": "Leaves a trail of snow behind you",
+    "wynnlib.major_id.name.desc_festivespirit": "Festive Spirit",
+    "wynnlib.major_id.desc.desc_festivespirit": "Plays wintery tunes",
+    "wynnlib.major_id.name.deadweight": "Dead Weight",
+    "wynnlib.major_id.desc.deadweight": "Totem's horizontal velocity is greatly increased at the cost of vertical movement",
+    "wynnlib.major_id.name.windsurf": "Windsurf",
+    "wynnlib.major_id.desc.winfsurf": "Righting Reflex lasts twice as long and is affected stronger by movement speed",
+    "wynnlib.major_id.name.coagulate": "Coagulate",
+    "wynnlib.major_id.desc.coagulate": "Blood Connection launches you further and higher upon teleporting to a nearby totem",
+    "wynnlib.major_id.name.lunge": "Lunge",
+    "wynnlib.major_id.desc.lunge": "Hop's horizontal velocity is greatly increased",
+    "wynnlib.major_id.name.gruesome_knots": "Gruesome Knots",
+    "wynnlib.major_id.desc.gruesome_knots": "Twisted Tether spends twice as much of your Blood Pool §c⚕§3 to deal triple damage",
+    "wynnlib.major_id.name.expunge": "Expunge",
+    "wynnlib.major_id.desc.expunge": "When using Heal, cast one instant pulse that heals 20% of your max health",
     "wynnlib.archetype.name.fallen": "Fallen",
     "wynnlib.archetype.desc.fallen": "Fallens can deal massive damage and become stronger when attacked.//8{(Damage, High Risks)}",
     "wynnlib.archetype.name.battle_monk": "Battle Monk",
