feat: indicator offset

--- a/src/main/resources/assets/wynnlib/lang/en_us.json
+++ b/src/main/resources/assets/wynnlib/lang/en_us.json
@@ -50,6 +50,7 @@
     "wynnlib.setting_category.general": "General",
     "wynnlib.setting_category.matchers": "Matchers",
     "wynnlib.setting_category.indicators": "Indicators",
+    "wynnlib.setting_category.offsets": "Offsets",
     "wynnlib.setting_option.name.durability": "Render Durability Bar",
     "wynnlib.setting_option.desc.durability": "Rendering durability bar on crafted items.",
     "wynnlib.setting_option.name.emerald_pouch_bar": "Render Emerald Pouch Bar",
@@ -72,6 +73,10 @@
     "wynnlib.setting_option.desc.icon_indicator": "Turn on stats indicator (icon) above the hotbar",
     "wynnlib.setting_option.name.starred_item_protect": "Protect Starred Items",
     "wynnlib.setting_option.desc.starred_item_protect": "Loot chest will not able to close when have starred items inside",
+    "wynnlib.setting_offset.name.icon_indicator_x": "Icon indicator X",
+    "wynnlib.setting_offset.name.icon_indicator_y": "Icon indicator y",
+    "wynnlib.setting_offset.name.side_indicator_x": "Side indicator X",
+    "wynnlib.setting_offset.name.side_indicator_y": "Side indicator y",
     "wynnlib.matcher_settings.item_protection": "Item Protection",
     "wynnlib.tier.mythic": "Mythic",
     "wynnlib.tier.fabled": "Fabled",
