--- a/src/main/resources/assets/wynnlib/lang/en_us.json
+++ b/src/main/resources/assets/wynnlib/lang/en_us.json
@@ -3,6 +3,7 @@
     "wynnlib.key.handbook": "Open Handbook",
     "wynnlib.key.slot_lock": "Toggle Slot Lock",
     "wynnlib.key.analyze_mode": "Toggle Analyze Mode",
+    "wynnlib.key.content_book": "Open Content Book",
     "wynnlib.mouse_key.left": "LEFT",
     "wynnlib.mouse_key.right": "RIGHT",
     "wynnlib.ui.equipments": "Equipments",
