chore: update ids

--- a/src/main/resources/assets/wynnlib/lang/en_us.json
+++ b/src/main/resources/assets/wynnlib/lang/en_us.json
@@ -75,9 +75,9 @@
     "wynnlib.setting_option.name.starred_item_protect": "Protect Starred Items",
     "wynnlib.setting_option.desc.starred_item_protect": "Loot chest will not able to close when have starred items inside",
     "wynnlib.setting_offset.name.icon_indicator_x": "Icon indicator X",
-    "wynnlib.setting_offset.name.icon_indicator_y": "Icon indicator y",
+    "wynnlib.setting_offset.name.icon_indicator_y": "Icon indicator Y",
     "wynnlib.setting_offset.name.side_indicator_x": "Side indicator X",
-    "wynnlib.setting_offset.name.side_indicator_y": "Side indicator y",
+    "wynnlib.setting_offset.name.side_indicator_y": "Side indicator Y",
     "wynnlib.matcher_settings.item_protection": "Item Protection",
     "wynnlib.tier.mythic": "Mythic",
     "wynnlib.tier.fabled": "Fabled",
@@ -459,16 +459,17 @@
     "wynnlib.id.damage_bonus_raw": "Damage",
     "wynnlib.id.neutral_damage_bonus": "6{\u2723 Neutral} Damage",
     "wynnlib.id.neutral_damage_bonus_raw": "6{\u2723 Neutral} Damage",
+    "wynnlib.id.healing_efficiency": "Healing Efficiency",
     "wynnlib.id.bonus_fire_damage": "c{\u2739 Fire} Damage",
     "wynnlib.id.bonus_water_damage": "b{\u2749 Water} Damage",
     "wynnlib.id.bonus_air_damage": "f{\u274b Air} Damage",
     "wynnlib.id.bonus_thunder_damage": "e{\u2726 Thunder} Damage",
     "wynnlib.id.bonus_earth_damage": "2{\u2724 Earth} Damage",
-    "wynnlib.id.bonus_fire_damage_raw": "c{\u2739 Fire} Damage",
-    "wynnlib.id.bonus_water_damage_raw": "b{\u2749 Water} Damage",
-    "wynnlib.id.bonus_air_damage_raw": "f{\u274b Air} Damage",
-    "wynnlib.id.bonus_thunder_damage_raw": "e{\u2726 Thunder} Damage",
-    "wynnlib.id.bonus_earth_damage_raw": "2{\u2724 Earth} Damage",
+    "wynnlib.id.fire_damage_bonus_raw": "c{\u2739 Fire} Damage",
+    "wynnlib.id.water_damage_bonus_raw": "b{\u2749 Water} Damage",
+    "wynnlib.id.air_damage_bonus_raw": "f{\u274b Air} Damage",
+    "wynnlib.id.thunder_damage_bonus_raw": "e{\u2726 Thunder} Damage",
+    "wynnlib.id.earth_damage_bonus_raw": "2{\u2724 Earth} Damage",
     "wynnlib.id.rainbow_damage_bonus": "Elemental Damage",
     "wynnlib.id.rainbow_damage_bonus_raw": "Elemental Damage",
     "wynnlib.id.main_attack_damage_bonus": "Main Attack Damage",
